.provarCaches/00D410000011HE0EAM/objects/rstk__sytxnexport__c.object
<CustomObject>
    <description>sytxnexport__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sytxnexport_cmpno__r.rstk__externalid__c &amp; &apos;_&apos; &amp; TEXT( rstk__sytxnexport_batchno__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__sytxnexport_cmpno__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  TEXT(rstk__sytxnexport_batchno__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexport_batchno__c</fullName>
        <inlineHelpText>The auto-assigned Batch Number for this batch of transactions being exported.</inlineHelpText>
        <label>Batch Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexport_begindate__c</fullName>
        <inlineHelpText>The Beginning Date for this export record.</inlineHelpText>
        <label>Begining Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexport_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Rootstock Company in which the set of transactions contained in the batch was performed.</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstk__sycmp__c</referenceTo>
        <relationshipLabel>Transaction Export Headers</relationshipLabel>
        <relationshipName>sytxnexports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexport_comments__c</fullName>
        <inlineHelpText>User-defined comments pertaining to this batch.  Can be up to 255 characters in length.</inlineHelpText>
        <label>Batch Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexport_costtransexport__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that this batch was created for and contains Inventory Cost transactions.</inlineHelpText>
        <label>sytxnexport_costtransexport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexport_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>sytxnexports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexport_enddate__c</fullName>
        <inlineHelpText>The End Date for this export record.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexport_payableinvoiceexport__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that this batch was created for and contains Accounts Payable Invoice transactions.</inlineHelpText>
        <label>sytxnexport_payableinvoiceexport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexport_postdate__c</fullName>
        <inlineHelpText>The date that this batch was posted in the financial system being used.</inlineHelpText>
        <label>Date Batch Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexport_posted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this batch has been posted in the financial system being used.</inlineHelpText>
        <label>Batch Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexport_salesinvoiceexport__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that this batch was created for and contains Accounts Receivable (Sales) Invoice transactions.</inlineHelpText>
        <label>sytxnexport_salesinvoiceexport</label>
        <type>Checkbox</type>
    </fields>
    <label>Transaction Export Header</label>
    <listViews>
        <fullName>rstk__Rstk</fullName>
        <columns>NAME</columns>
        <columns>rstk__sytxnexport_batchno__c</columns>
        <columns>rstk__sytxnexport_cmpno__c</columns>
        <columns>rstk__sytxnexport_div__c</columns>
        <columns>rstk__sytxnexport_enddate__c</columns>
        <columns>rstk__sytxnexport_posted__c</columns>
        <columns>rstk__sytxnexport_postdate__c</columns>
        <columns>rstk__sytxnexport_comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>Rstk</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Export Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>